tests/ui/feature-gates/feature-gate-box_patterns.stderr
error[E0658]: box pattern syntax is experimental
  --> $DIR/feature-gate-box_patterns.rs:2:9
   |
LL |     let box x = Box::new('c');
   |         ^^^^^
   |
   = note: see issue #29641 <https://github.com/rust-lang/rust/issues/29641> for more information
   = help: add `#![feature(box_patterns)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
