tests/ui/feature-gates/feature-gate-box_patterns.rs
fn main() {
    let box x = Box::new('c'); //~ ERROR box pattern syntax is experimental
    println!("x: {}", x);
}
